[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algorithm"
version = "0.1.0"
description = "Algorithms and data structures without external deps"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Your Name" }]
license = { text = "MIT" }
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["algorithms*", "data_structures*"]
exclude = ["examples*"]